        32-bit compressed pointers, which considerably reduces
        memory usage (especially if many small objects are on used) 
        on a system with 64-bit pointers (slightly on
        a system with 32-bit pointers).  Speed on some tasks
        will also be improved, while on other tasks, using compressed
        pointers has a speed penalty of up to about 25\%.
  }}

  \subsection{BUG FIXES}{
  \itemize{
  \item Cross-references between manuals in doc/manual/R-admin.html, etc.
        now go to the other manuals in this same place.  Previously (and
        in current R core versions), they went to the manuals of that
        name at cran.r-project.org, even when those manuals are not for
        the same version of R.
  }}

}


\section{CHANGES IN VERSION RELEASED 2016-10-24}{

  \subsection{INTRODUCTION}{
  \itemize{ 
  \item This is a small maintenance release, fixing a few bugs and installation
        problems.
  }}

  \subsection{INSTALLATION}{
  \itemize{
  \item When building pqR on a Mac, some Mac-specific source files
        are now compiled with the default 'gcc' (really clang on
        recent Macs), regardless of what C compiler has been specified
        for other uses.  This is necessary to bypass problems with
        Apple-supplied header files on El Capitan and Sierra. There are
        also a few other tweaks to building on a Mac.
  }}

  \subsection{BUG FIXES}{
  \itemize{
  \item Some bugs have been fixed involving the interaction of finalizers
        and active bindings with some pqR optimizations, one of which
        showed up when building with clang on a Mac.
  }}
}


\section{CHANGES IN VERSION RELEASED 2016-10-05}{

  \subsection{INTRODUCTION}{
  \itemize{ 
  \item With this release, pqR, which was based on R-2.15.0, now incorporates
        the new features, bug fixes, and some relevant performance improvements
        from R-2.15.1.  The pqR version number 